--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,12 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.10
+          token: ${{ secrets.YOUR_GITHUB_TOKEN }}
 
     - name: Install dependencies
       run: |
