--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Python 3.10
+      run: |
+        sudo apt update
+        sudo apt install python3.10
+        
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
