--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Install Python 3.10
-      run: |
-        sudo apt update
-        sudo apt install python3.10
-        
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.10
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
