--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Run animation script
       run: |
-        python animation_script.py  # Replace 'animation_script.py' with the name of your Python script
+        python workspace.py  # Replace 'animation_script.py' with the name of your Python script
 
     - name: Upload animation artifact
       uses: actions/upload-artifact@v2
