--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.13
+        python-version: 3.10
         token: ${{ secrets.YOUR_GITHUB_TOKEN }}
 
-    - name: Install dependencies
+    - name: Install dependencies 1
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Replace 'requirements.txt' with your requirements file if needed
+
+    - name: Install dependencies 2
       run: |
         pip install matplotlib numpy
 
