--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: linux-latest
 
     steps:
     - name: Set up Python 3.10
@@ -16,13 +16,10 @@ jobs:
         python-version: 3.10
         token: ${{ secrets.YOUR_GITHUB_TOKEN }}
 
-    - name: Install dependencies 1
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # Replace 'requirements.txt' with your requirements file if needed
-
-    - name: Install dependencies 2
-      run: |
         pip install matplotlib numpy
 
     - name: Run animation script
