--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,24 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-        token: ${{ secrets.YOUR_GITHUB_TOKEN }}
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9 
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace 'requirements.txt' with your requirements file if needed
-        pip install matplotlib numpy
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt 
 
-    - name: Run animation script
-      run: |
-        python workspace.py  # Replace 'animation_script.py' with the name of your Python script
+      - name: Run animation script
+        run: python workspace.py
 
-    - name: Upload animation artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: solar_sys_animation
-        path: solar_sys.gif
+      - name: Upload animation artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: solar_sys_animation
+          path: solar_sys.gif
